[gd_scene load_steps=5 format=3 uid="uid://de7dhasgoom3c"]

[ext_resource type="Script" path="res://Scenes/enviroment/test_altar.gd" id="1_xoncx"]
[ext_resource type="Texture2D" uid="uid://g1nbmbyvaaa0" path="res://Assets/Texture/Environment/Test Altar.png" id="2_d5lt5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uhh6o"]
size = Vector2(40, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e4dqc"]
size = Vector2(40, 16)

[node name="Test Altar" type="StaticBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_xoncx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_d5lt5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_uhh6o")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_e4dqc")

[node name="SpawnNode" type="Node2D" parent="."]
position = Vector2(0, -8)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
